tests/snapshots/rust-1.49.0/acceptance__features_produce_human_readable_errors.snap
---
source: tests/acceptance_tests.rs
assertion_line: 143
expression: output
---
  |
  |                     ^^^^^^^^^^^^^^
 --> src/lib.rs:5:21
5 | #[test_case(2 => is matching_regex "abc")]
To learn more, run the command again with --verbose.
error: aborting due to previous error
error: could not compile `features_produce_human_readable_errors`
error: unexpected token
